src/app/shared/search/search-filters/search-filters.component.scss
@import '../../../../styles/variables';
@import '../../../../styles/mixins';

:host {
  display: block;
  max-height: 80vh;
  overflow-y: auto;
  overscroll-behavior: contain;
}

:host ::ng-deep {
  ngx-skeleton-loader .skeleton-loader {
    height: var(--ds-filters-skeleton-height);
    margin-bottom: var(--ds-filters-skeleton-spacing);
    padding: var(--ds-filters-skeleton-spacing);
    background-color: var(--bs-light);
    box-shadow: none;
  }
}

